Fixed table text align

--- a/src/main/resources/public/css/dashboard.css
+++ b/src/main/resources/public/css/dashboard.css
@@ -118,3 +118,11 @@ body {
 {
   margin-top: 10%;
 }
+
+td{
+  text-align: left;
+}
+
+th {
+  text-align: left;
+}
